--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "genetic-salesman",
   "version": "0.1.0",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ahuth/genetic-salesman.git"
+  },
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
