--- a/.eslintrc
+++ b/.eslintrc
@@ -5,11 +5,13 @@
   "extends": "airbnb",
   "parser": "babel-eslint",
   "rules": {
+    "arrow-body-style": "off",
     "func-names": "off",
     "max-len": "off",
     "no-mixed-operators": "off",
     "no-use-before-define": "off",
     "object-curly-newline": "off",
+    "react/destructuring-assignment": "off",
     "react/jsx-one-expression-per-line": "off",
     "react/prop-types": "off",
     "react/sort-comp": "off"
