Allow adding and removing cities

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,9 +8,11 @@
     "arrow-body-style": "off",
     "func-names": "off",
     "max-len": "off",
+    "no-else-return": "off",
     "no-mixed-operators": "off",
     "no-use-before-define": "off",
     "object-curly-newline": "off",
+    "prefer-destructuring": "off",
     "react/destructuring-assignment": "off",
     "react/jsx-one-expression-per-line": "off",
     "react/prop-types": "off",
