Add base "solution" button
Just draws lines between the cities in order

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
     "no-mixed-operators": "off",
     "no-use-before-define": "off",
     "object-curly-newline": "off",
+    "operator-linebreak": "off",
     "prefer-destructuring": "off",
     "react/destructuring-assignment": "off",
     "react/jsx-one-expression-per-line": "off",
