--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
     "max-len": "off",
     "no-else-return": "off",
     "no-mixed-operators": "off",
+    "no-plusplus": "off",
     "no-use-before-define": "off",
     "object-curly-newline": "off",
     "operator-linebreak": "off",
