--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "evolved-salesman",
   "version": "0.1.0",
+  "homepage": "https://ahuth.github.io/evolved-salesman",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -17,13 +18,16 @@
     "eslint-config-airbnb": "^17.0.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.10.0"
+    "eslint-plugin-react": "^7.10.0",
+    "gh-pages": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint --ext .jsx --ext .js src"
+    "lint": "eslint --ext .jsx --ext .js src",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
