--- a/package.json
+++ b/package.json
@@ -8,18 +8,17 @@
     "url": "https://github.com/ahuth/evolved-salesman.git"
   },
   "dependencies": {
-    "lodash": "^4.17.10",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "lodash": "^4.17.11",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-scripts": "2.1.1"
   },
   "devDependencies": {
-    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.10.0",
-    "gh-pages": "^1.2.0"
+    "gh-pages": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,5 +28,11 @@
     "lint": "eslint --ext .jsx --ext .js src",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
