--- a/.eslintrc
+++ b/.eslintrc
@@ -1,23 +1,14 @@
 {
-  "env": {
-    "browser": true
-  },
-  "extends": "airbnb",
-  "parser": "babel-eslint",
+  "extends": "react-app",
   "rules": {
-    "arrow-body-style": "off",
-    "func-names": "off",
-    "max-len": "off",
-    "no-else-return": "off",
-    "no-mixed-operators": "off",
-    "no-plusplus": "off",
-    "no-use-before-define": "off",
-    "object-curly-newline": "off",
-    "operator-linebreak": "off",
-    "prefer-destructuring": "off",
-    "react/destructuring-assignment": "off",
-    "react/jsx-one-expression-per-line": "off",
-    "react/prop-types": "off",
-    "react/sort-comp": "off"
+    "comma-dangle": ["error", {
+      "arrays": "always-multiline",
+      "objects": "always-multiline",
+      "imports": "always-multiline",
+      "exports": "always-multiline",
+      "functions": "always-multiline"
+    }],
+    "semi": ["error", "always"],
+    "quotes": ["error", "single"]
   }
 }
