--- a/package.json
+++ b/package.json
@@ -7,15 +7,6 @@
     "type": "git",
     "url": "https://github.com/ahuth/evolved-salesman.git"
   },
-  "dependencies": {
-    "lodash": "^4.17.11",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.1"
-  },
-  "devDependencies": {
-    "gh-pages": "^2.0.1"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -24,6 +15,15 @@
     "lint": "eslint --ext .jsx --ext .js src",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
+  },
+  "dependencies": {
+    "lodash": "^4.17.15",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1",
+    "react-scripts": "^3.2.0"
   },
   "browserslist": [
     ">0.2%",
